Make config changes per author's notes (add .babelrc, .eslintrc.js

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "webpack": "webpack --mode=production",
+    "webpack": "webpack -d --watch",
     "server": "nodemon server/index.js",
     "db:setup": "node database/seed.js",
     "test": "jest"
