--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "faker": "^4.1.0",
+    "file-system": "^2.2.2",
     "http": "0.0.1-security",
+    "json2csv": "^5.0.1",
     "mongoose": "^5.9.19",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
