--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "webpack": "webpack -d --watch",
     "server": "nodemon server/index.js",
     "db:setup": "node database/seed.js",
-    "test": "jest"
+    "test": "jest",
+    "pg-csv-gen": "node csv/dataHelpers/pg/trigger.js"
   },
   "repository": {
     "type": "git",
