--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^0.19.2",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
+    "cluster": "^0.7.7",
     "cors": "^2.8.5",
     "csv-write-stream": "^2.0.0",
     "csv-writer": "^1.6.0",
@@ -37,6 +38,7 @@
     "morgan": "^1.10.0",
     "newrelic": "^6.11.0",
     "nodemon": "^2.0.4",
+    "os": "^0.1.1",
     "path": "^0.12.7",
     "pg": "^8.3.0",
     "prop-types": "^15.7.2",
