--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cors": "^2.8.5",
     "csv-write-stream": "^2.0.0",
     "csv-writer": "^1.6.0",
+    "eslint": "^7.8.1",
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "file-system": "^2.2.2",
